syntax = "proto3";

// import "common/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;auth_microservice";

message SessionToken {
    string ID = 1;
    google.protobuf.Timestamp ExpirationDate = 2;
}

message AuthUserID {
    uint64 Value = 1;
}

service AuthService {
    rpc AuthUser (AuthUserID) returns (SessionToken) {}
    rpc VerifyAuth (SessionToken) returns (AuthUserID) {}
    rpc LogOut (SessionToken) returns (google.protobuf.Empty) {}
    rpc GetLifetime (google.protobuf.Empty) returns (google.protobuf.Duration) {}
}

